Fix gtk critical in clip info window.
Fix window sizing errors in rfxbuilder.
Theming updates for darker themes with gtk+ 3.x
Add icedax as altname for cdda2wav.
Make better use of missing CD device warning.
Remove some spurious effect reinitialisations for webcams.
Allow application of audio effects to the backing audio track in multitrack mode.
Minor GUI improvements.









Version 2.4.2 (12 September 2015)
---------------------------------
Fix crash after recording with pulseaudio external audio.
Fix possible crash when converting from YUV420 to UYVY / YUYV.
Fix memory issue in audio triggered video generators.
Fix buttons issue in the progress dialog (regression).
Fix occasional hang in shutdown via OSC.
Minor fixes for headless (nogui, noplaywin) modes.
Increase size of debug output window when encoding (Regression).
Fix for compiling without jack.
Fix crash in mask_overlay effect.
Fix some threading problems when running audio and video effects together.
Improve OSC responsiveness during playback.
Fixes for beat_detector, edge, vector_visualiser, and kaleidoscope plugins.
Fix latency issue with pulseaudio external input.
Fix for opening unicap device during playback.
Work around gtk+ bug for clips menu.
Implement OSC commands /audio/mute/set, /audio/mute/get, /audio/volume/set, /audio/volume/get and /clip/open/unicap.
Fixes / refactoring for firewire grabbing.
Re-enable button icons (via preference) and clean up stock button code.





Version 2.4.1 (9 Aug 2015)
--------------------------
NOTE: the LiVES homepage has moved to http://lives-video.com

General compilation fixes.
Compilation fixes for libav.
Minor fixes for BSD compilation.
Minor fix for initialisation of "alien_overlay" effect.
Fix image file previews within File Open dialog (regression).







Version 2.4.0 (3 May 2015)
-------------------------
Implement workaround for expose event problems in gtk+ 3.10.
Fix threading crash in multitrack.
Fix invalid saving of layouts in multitrack.